--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,11 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
+collections:
+  casestudies:
+    output: true
+    permalink: /casestudies/:path/
+
 # Build settings
 theme: minima
 plugins:
