--- a/_config.yml
+++ b/_config.yml
@@ -19,20 +19,36 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Marta Duarte
-email: your-email@example.com
+email: marta.fvduarte@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Product Designer
 baseurl: "/projecto" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+linkedin_username: martafvduarte
+behance_username: martaduarte
+instagram_username: marta.fv.duarte
+pinterest_username: maartad
+
+defaults:
+  - scope:
+      path: "assets/img"
+    values:
+      image: true
 
 collections:
   casestudies:
     output: true
     permalink: /casestudies/:path/
+    sort_by: year 
+
+  experience:
+    experience:
+      sort_by: start 
+
+  education:
+    education:
+      sort_by: start
+
 
 # Build settings
 theme: minima
